; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_df-problems.c_df_lr_transfer_function.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_df-problems.c_df_lr_transfer_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dataflow = type { i32 }
%struct.df_lr_bb_info = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dataflow*, i32)* @df_lr_transfer_function to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @df_lr_transfer_function(%struct.dataflow* %0, i32 %1) #0 {
  %3 = alloca %struct.dataflow*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.df_lr_bb_info*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.dataflow* %0, %struct.dataflow** %3, align 8
  store i32 %1, i32* %4, align 4
  %10 = load %struct.dataflow*, %struct.dataflow** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call %struct.df_lr_bb_info* @df_lr_get_bb_info(%struct.dataflow* %10, i32 %11)
  store %struct.df_lr_bb_info* %12, %struct.df_lr_bb_info** %5, align 8
  %13 = load %struct.df_lr_bb_info*, %struct.df_lr_bb_info** %5, align 8
  %14 = getelementptr inbounds %struct.df_lr_bb_info, %struct.df_lr_bb_info* %13, i32 0, i32 3
  %15 = load i32, i32* %14, align 4
  store i32 %15, i32* %6, align 4
  %16 = load %struct.df_lr_bb_info*, %struct.df_lr_bb_info** %5, align 8
  %17 = getelementptr inbounds %struct.df_lr_bb_info, %struct.df_lr_bb_info* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* %7, align 4
  %19 = load %struct.df_lr_bb_info*, %struct.df_lr_bb_info** %5, align 8
  %20 = getelementptr inbounds %struct.df_lr_bb_info, %struct.df_lr_bb_info* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  store i32 %21, i32* %8, align 4
  %22 = load %struct.df_lr_bb_info*, %struct.df_lr_bb_info** %5, align 8
  %23 = getelementptr inbounds %struct.df_lr_bb_info, %struct.df_lr_bb_info* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  store i32 %24, i32* %9, align 4
  %25 = load i32, i32* %6, align 4
  %26 = load i32, i32* %8, align 4
  %27 = load i32, i32* %7, align 4
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @bitmap_ior_and_compl(i32 %25, i32 %26, i32 %27, i32 %28)
  ret i32 %29
}

declare dso_local %struct.df_lr_bb_info* @df_lr_get_bb_info(%struct.dataflow*, i32) #1

declare dso_local i32 @bitmap_ior_and_compl(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
